--- a/index.html
+++ b/index.html
@@ -60,19 +60,6 @@
 
       return row_obj;
     }).then(function (rows) {
-      var dtp = { min: 0, max: 0 };
-      var pogibli = { min: 0, max: 0 };
-      var raneni = { min: 0, max: 0 };
-
-      [dtp.min, dtp.max] = d3.extent(rows, row => row.dtp);
-      [pogibli.min, pogibli.max] = d3.extent(rows, row => row.pogibli);
-      [raneni.min, raneni.max] = d3.extent(rows, row => row.raneni);
-
-      var max_min_arr = [
-        ...Object.values(dtp),
-        ...Object.values(pogibli),
-        ...Object.values(raneni),
-      ]
 
       var date_min, date_max;
       [date_min, date_max] = d3.extent(rows, row => row.date);
@@ -91,6 +78,19 @@
         .attr("transform", "translate(0, " + (chart_params.height - chart_params.margin.bottom) + ")")
         .call(xAxis)
 
+      var dtp = { min: 0, max: 0 };
+      var pogibli = { min: 0, max: 0 };
+      var raneni = { min: 0, max: 0 };
+
+      [dtp.min, dtp.max] = d3.extent(rows, row => row.dtp);
+      [pogibli.min, pogibli.max] = d3.extent(rows, row => row.pogibli);
+      [raneni.min, raneni.max] = d3.extent(rows, row => row.raneni);
+
+      var max_min_arr = [
+        ...Object.values(dtp),
+        ...Object.values(pogibli),
+        ...Object.values(raneni),
+      ]
 
       var max_y = d3.max(max_min_arr);
       const yScale = d3.scaleLinear()
@@ -134,7 +134,7 @@
       .on("mouseenter", function (row) {
         var column_name = d3.select(this).attr("column_name");
         var info_text = `${row.date}: ${row[column_name]}`;
-        if(row_field_name !== "dtp") {
+        if (row_field_name !== "dtp") {
           info_text += " (среди них детей: ";
           info_text += row_field_name === "pogibli" ? row.pogiblo_detei : row.raneno_detei;
           info_text += ")"
@@ -145,16 +145,16 @@
       })
       .on("mouseleave", function () {
         d3.select(".info-text").remove()
-        d3.selectAll("rect.bar").style("display", "")
         d3.selectAll("rect.bar").style("opacity", 1)
       })
+
+    drawLegend(chart)
   }
 
   function showOnlySelected(chart, column_name) {
-    chart.selectAll("rect.bar").each(function(bar) {
+    chart.selectAll("rect.bar").each(function (bar) {
       var element = d3.select(this)
-      //element.style("display", element.attr("column_name") === column_name ? "" : "none");
-      element.style("opacity", element.attr("column_name") === column_name ? 1 : 0.3);
+      element.style("opacity", element.attr("column_name") === column_name ? 1 : 0.15);
     })
   }
 
@@ -166,7 +166,53 @@
       .text(text)
   }
 
-  function drawLegend(chart, scales = {}) {
+  function drawLegend(chart) {
+    var legend_items = [
+      { name_en: "dtp", name_ru: "ДТП", color: colors["dtp"] },
+      { name_en: "pogibli", name_ru: "Погибли", color: colors["pogibli"] },
+      { name_en: "raneni", name_ru: "Ранены", color: colors["raneni"] },
+    ]
+    var x = chart.attr("width") / 3;
+
+    chart.selectAll("rect.legend-rect")
+      .data(legend_items).enter()
+      .append("rect")
+      .classed("legend-rect", true)
+      .attr("name_en", item => item.name_en)
+      .attr("x", x)
+      .attr("y", (item, index) => 10 + index * 20)
+      .attr("width", 40)
+      .attr("height", 15)
+      .style("fill", item => item.color)
+      .style("cursor", "pointer")
+      .on("mouseenter", showOnlyChecked)
+      .on("mouseleave", showAllBars)
+
+    chart.selectAll("text.legend-text")
+      .data(legend_items).enter()
+      .append("text")
+      .classed("legend-text", true)
+      .attr("name_en", item => item.name_en)
+      .attr("x", x + 50)
+      .attr("y", (item, index) => 23 + index * 20)
+      .text(item => item.name_ru)
+      .style("cursor", "pointer")
+      .on("mouseenter", showOnlyChecked)
+      .on("mouseleave", showAllBars)
+
+    function showOnlyChecked() {
+      var checked_elem = d3.select(this)
+      d3.selectAll("rect.bar").each(function () {
+        var elem = d3.select(this)
+        elem.style("display", elem.classed(checked_elem.attr("name_en")) ? "" : "none")
+      })
+    }
+
+
+  }
+
+  function showAllBars() {
+    d3.selectAll("rect.bar").style("display", "")
   }
 
   drawChart()
